Update title in love-add2.html

--- a/love-add2.html
+++ b/love-add2.html
@@ -56,7 +56,7 @@
 
     <canvas id="pinkboard"></canvas>
 
-    <div class="title">恋爱100天纪念日</div>
+    <div class="title">张祥❤️闫雨</div>
     <script>
 
         var settings = {
