--- a/love-add.html
+++ b/love-add.html
@@ -30,7 +30,7 @@
             /* 文字居中 */
             text-align: center;
             /* 字体大小 */
-            font-size: 30px;
+            font-size: 24px;
             /* 背景颜色 */
             background-color: transparent;
             /* 文字颜色 */
@@ -53,7 +53,7 @@
 
     <canvas id="pinkboard"></canvas>
 
-    <div class="title">何未来，我喜欢你</div>
+    <div class="title">张祥❤️闫雨</div>
     <script>
 
         var settings = {
